<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeChatMoment</string>
    <string name="main_tab_chat">WeChat</string>
    <string name="main_tab_contact">Contact</string>
    <string name="main_tab_find">Find</string>
    <string name="main_tab_me">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_moment">MomentActivity</string>
    <string name="title_activity_image_viewer_pager">ImageViewer</string>

    <string name="tweet_hint_nickname">User nickname</string>
    <string name="tweet_hint_text_content_long">这是一条测试用朋友圈，内容也没有啥意义，仅仅用于查看显示状态与布局效果，内容很长很长很长，因为我在这里塞了一些没用的文字，很啰嗦很啰嗦，虽然不知道写些什么好，但还是勉强凑一些字数，比如巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻巴拉巴拉巴拉哈哈哈呵呵呵哟哟嘻嘻</string>
    <string name="title_activity_personal_info">PersonalInfo</string>

    <string name="find_scan">scan</string>
    <string name="find_shake">shake</string>
    <string name="find_nearpeople">near poeple</string>
    <string name="find_bottom">current bottle</string>
    <string name="find_shopping">shopping</string>
    <string name="find_game">game</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
