<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    android:orientation="vertical" >


    <RelativeLayout
        android:id="@+id/re_friends"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_friends"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_friends"
            android:text="@string/find_moment"
            android:textColor="#353535"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_friends_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/find_friends" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_erweima"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_erweima"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_erweima"
            android:text="@string/find_scan"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_yaoyiyao"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_yaoyiyao"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_yaoyiyao"
            android:text="@string/find_shake"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_fujin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_fujin"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_fujin"
            android:text="@string/find_nearpeople"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_piaoliuping"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_piaoliuping"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_piaoliuping"
            android:text="@string/find_bottom"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_gouwu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_gouwu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_gouwu"
            android:text="@string/find_shopping"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_youxi"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_youxi"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_youxi"
            android:text="@string/find_game"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>


</LinearLayout>
